feat: add queue worker service to compose stub
Uses queue:listen for dev sandboxes — always picks up latest
code changes without needing worker restart.

--- a/stubs/compose.sail.yaml
+++ b/stubs/compose.sail.yaml
@@ -20,6 +20,20 @@ services:
             - '.:/var/www/html'
         networks:
             - sail
+    queue:
+        image: 'sail-8.4/app'
+        depends_on:
+            - laravel.test
+        command: php artisan queue:listen --sleep=3 --tries=3 --verbose
+        environment:
+            WWWUSER: '${WWWUSER:-1000}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            IGNITION_LOCAL_SITES_PATH: '${PWD}'
+        volumes:
+            - '.:/var/www/html'
+        networks:
+            - sail
 
 networks:
     sail:
